# ninfo

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_ninfo.ini  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  pres.html  pres.md
ninfo/: __init__.py  dictprint.py  util.py
ninfo/helpers/: splunk.py
ninfo/plugins/: cymruwhois_plugin.py  cymruwhois_template_text.mako  geoip_plugin.py  geoip_template_text.mako  plugin_geoip.py  plugin_whois.py  whois_plugin.py
tests/: clone.cfg  common.py  plug_a.py  test_clone.py  test_ninfo.py  test_plugin_loading.py  test_util.py
